ShowData Funktion um Demonstration der verwendeten Icons erweitert.
Die Funktion lcd_update_icon() arbeitet immer relativ zur letzten Icon Position.
Die Funktion lcd_big_icon() kann als Ziel eine der 4 Quadranten des LCD angeben. Standard = unten rechts.
SetCursor verwendet als vertikal Position (y) eine Auflösung von 8 Pixel, unabhängig von der Fonthöhe.
Verschiedene Versionen der Transistor-Icons sind mit ICON_TYPE wählbar (1=thin, 2=bold).
Die Spule wird bei graphischer Ausgabe mit zwei neuen Zeichen, beim Character-display mit "-ww-" gezeichnet.
Die Update Teile für die Transistor-Icons werden als bitmap mit relativer Lage + Größe (x+y) definiert.
Die Basis Transistor-Symbole werden als Icons in einem 24x32 pixel font definiert.
Unbenutze Teile der Font-Dateien wurden entfernt, die Lage der kyrillischen Zeichen verschoben.
Organisation der Fontdaten mit Höhe >8 geändert, zuerst alle oberen Daten, dann die unteren Daten.
Doppelte Beschreibung der Schutzdiode bei FET's entfernt, bei langer Form Uf der Diode in Zeile 4.
Bitmap für Testports größer und invers möglich, Option BIG_TP und INVERSE_TP.
Unterstuetzung des ST7108 Controllers mit einem seriell-parallel Wandler 74HC164.
Horizontal und vertical Flip per Software, nicht mehr mit ST7565 Befehl.
Auswahl fuer 8x12, 8x14, 8x15 und 8x16thin Fonts.
Unterstuetzung des ST7920 Controllers mit 4-bit parallel und seriell Interface.
1.11 / 07.02.2015
Die lcd_clear Funktion für den ST7565 Controller umgestellt.
Die Anzeigezeiten für das Impulsdrehgeber-Ergebnis verlängert.
Verkürzung des Strompulses der ESR-Messung von 27us auf 8us.
Sperrschichtkapazität bei Diode wird mit 2 Dezimalstellen ausgegeben. 3 Stellen nur bei LCD_LINE_LENGTH > 16 .
Schutzdiode wird bei graphischer Datestellung auch bei bipolaren Transistoren angezeigt.
Neue Optionen LCD_INTERFACE_MODE=2 und LCD_I2C_ADDR für die I2C Schnittstelle des SSD1306 Kontrollers.
Anpassung der Korrekturfunktion für die ESR-Messung kleiner Kapazitäten.