@@ -755,10 +755,10 @@
 	8, // The width of the bitmap.
 	32, // The height of the bitmap.
  #if (ICON_TYPE == 1)
-	0x20, 0x20, 0x20, 0x20, 0xE0, 0x00, 0x00, 0x00,
+	0x04, 0x04, 0x04, 0x04, 0xFC, 0x00, 0x00, 0x00,
 	0x00, 0x20, 0x60, 0xE0, 0xFF, 0xE0, 0x60, 0x20,
 	0x00, 0x02, 0x02, 0x02, 0xFF, 0x02, 0x02, 0x02,
-	0x08, 0x08, 0x08, 0x08, 0x0F, 0x00, 0x00, 0x00,
+	0x20, 0x20, 0x20, 0x20, 0x3F, 0x00, 0x00, 0x00,
 
  #else
 	0x06, 0x06, 0x06, 0xFE, 0xFE, 0x00, 0x00, 0x00,
