@@ -31,6 +31,7 @@ void lcd_line3(void);
 void lcd_line4(void);
 unsigned char reverse_byte(unsigned char);
 #ifdef WITH_GRAPHICS
+// Graphics display only: Some drawing functions for graphics LCD
 void lcd_pgm_bitmap(const unsigned char * pbitmap,
                     unsigned char x, unsigned char y,
                     unsigned char options);
@@ -39,6 +40,8 @@ void lcd_set_pixels(const unsigned char * pdata,
                     unsigned char options,
                     unsigned char width, unsigned char height);
 void ShowIcons(void);		/* show the different Icons */
+void lcd_draw_pin(unsigned char index, char dx, char dy);
+void lcd_draw_trans_pins( char dxb, char dyb);
 #endif
 #if (LCD_ST_TYPE == 7920)
 void lcd_refresh(void);		/* for ST7920 controller only*/
