@@ -1,3 +1,4 @@
+lcd_draw_trans_pins und lcd_draw_pin brauchen jetzt relative Adresse bezogen auf die Icon-Position.
 ShowData Funktion um Demonstration der verwendeten Icons erweitert.
 Die Funktion lcd_update_icon() arbeitet immer relativ zur letzten Icon Position.
 Die Funktion lcd_big_icon() kann als Ziel eine der 4 Quadranten des LCD angeben. Standard = unten rechts.
